css/style.css
/*********************************************************************************/
/*DEVICES from ~320px to 479px*/
/*********************************************************************************/
* { -webkit-box-sizing: border-box; box-sizing: border-box; }
*:focus { outline-color: transparent; }

body {
  margin: 0;
  line-height: 150%;
  word-spacing: 5px;
  font-family: 'Lato', sans-serif;
  font-size: 110%;
  color: #232323;
}
/*------------------------------------------------------------------------------*/
/*HEADER*/
/*-------------------------------------------------------------------------------*/
header {
  position: relative;
  height: 100vh;
  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.6)), to(rgba(0, 0, 0, 0.6))), url("../img/header-back.jpeg");
  background: -webkit-linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("../img/header-back.jpeg");
  background: -o-linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("../img/header-back.jpeg");
  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("../img/header-back.jpeg");
  background-size: cover;
  background-position: center;
}

.container {
  padding: 0 15px;
  margin: 0 auto;
}
/*---------------------------------------------------------------------------------*/
/*Menu*/
/*--------------------------------------------------------------------------------*/
.logo {
  height: 100px;
  width: auto;
  margin-top: 20px;
  float: left;
}

.menu {
  display: none;
  padding: 0;
  margin-top: 40px;
  float: left;
  list-style: none;
}

.menu-item {
  display: block;
  margin-left: 30px;
  margin-bottom: 3px;
}

.menu-item a {
  padding: 10px 0;
  border-bottom: 1px solid transparent;
  font-size: 80%;
  text-decoration: none;
  text-transform: uppercase;
  color: #fff;
  -webkit-transition: all .2s;
  -o-transition: all .2s;
  transition: all .2s;
}

.menu-item a:hover {
  border-bottom: 1px solid #ff9e28;
  color: #ff9e28;
}

.menu-icon {
  display: inline-block;
  float: right;
  margin-top: 30px;
  margin-right: 20px;
  cursor: pointer;
}

.menu-icon i {
  font-size: 35px;
  color: #fff;

}
/*--------------------------------------------------------------------------------*/
/*Fixed navbar*/
/*---------------------------------------------------------------------------------*/
.fixed-nav {
  position: fixed;
  top: 0;
  left: 0;
  z-index: 200;
  width: 100%;
  padding: 0 5%;
  background: -webkit-gradient(linear, left top, left bottom, from(#303030), to(#606060));
  background: -webkit-linear-gradient(#303030, #606060);
  background: -o-linear-gradient(#303030, #606060);
  background: linear-gradient(#303030, #606060);
  -webkit-box-shadow: 0 2px 15px #303030;
          box-shadow: 0 2px 15px #303030;
}

.fixed-nav .logo {
  height: 40px;
  margin-top: 6px;
  margin-bottom: 5px;
}

.fixed-nav .menu {
  margin-top: 13px;
  margin-bottom: 10px;
}

.fixed-nav .menu-item a,
.fixed-nav .menu-item a:hover { border-bottom: 0; }

.fixed-nav .menu-icon {
  margin-top: 8px;
  margin-right: 0;
}
/*--------------------------------------------------------------------------------*/
/*Heading*/
/*-------------------------------------------------------------------------------*/
.heading {
  position: absolute;
    top: 30%;
}

h1 {
  text-transform: uppercase;
  font-weight: 300;
  line-height: 110%;
  font-family: 'Josefin Sans', sans-serif;
  font-size: 20px;
  color: #fff;
}

h1 span { font-size: 120%; }
/*=====================================*/
/*Animation*/
/*=====================================*/
h1 { opacity: 0; }
h1.animated { opacity: 1; }
.heading .btn { opacity: 0; }
.heading .btn.animated { opacity: 1; }
/*=====================================*/
/*-----------------------------------------------------------------------------*/
/*Buttons*/
/*------------------------------------------------------------------------------*/
.heading .btn { margin-top: 20px; }

.btn {
  width: 130px;
  height: 40px;
  border: 1px solid #cc6f00;
  border-radius: 30px;
  background: transparent;
  font-size: 80%;
  font-family: 'Lato', sans-serif;
  text-transform: uppercase;
  color: #d87200;
  cursor: pointer;
  -webkit-transition: color .2s, background-color .3s;
  -o-transition: color .2s, background-color .3s;
  transition: color .2s, background-color .3s;
}

.btn-full {
  color: #fff;
  background: #ff9e28;
}

.btn:hover {
  color: #fff;
  background: #cc6f00;
}
/*-------------------------------------------------------------------------------*/
/*ABOUT*/
/*-------------------------------------------------------------------------------*/
.title {
  padding-top: 40px;
  text-transform: uppercase;
  text-align: center;
  letter-spacing: 3px;
  word-spacing: 7px;
  font-size: 75%;
  font-family: 'Josefin Sans', sans-serif;
}

.title::after {
  display:inline-block;
  width: 80px;
  margin-bottom: 10px;
  border-bottom: 2px solid #ff9e28;
  content: "";
}

.feature-description .fa {
  margin-top: 10px;
  font-size: 35px;
  color: #ff9e28;
}

h3 {
  margin-bottom: 5px;
  text-transform: uppercase;
  font-size: 105%;
  font-family: 'Josefin Sans', sans-serif;
}

.feature-description p { margin-top: 0; }
/*=====================================*/
/*Animation*/
/*=====================================*/
.feature-description { opacity: 0; }
.feature-description.animated { opacity: 1; }
/*=====================================*/
/*-----------------------------------------------------------------------------*/
/*FOOD PHOTOS*/
/*------------------------------------------------------------------------------*/
.food-photos {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -ms-flex-wrap: wrap;
      flex-wrap: wrap;
  margin: 50px auto 0;
}

.meal-img {
  width: 25%;
  margin: 0;
  overflow: hidden;
  background: #000;
}
/* ... */

